fix spacing on home page because of css specificity

--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -95,28 +95,32 @@
 }
 
 @media screen and (max-width: 1200px) {
-  .videoContainer {
-    height: 460px;
-  }
-  .date,
-  .ticketsAvailable {
-    font-size: 18px;
+  .homePageContainer {
+    .videoContainer {
+      height: 460px;
+    }
+    .date,
+    .ticketsAvailable {
+      font-size: 18px;
+    }
   }
 }
 @media screen and (max-width: $tablet) {
-  .videoContainer {
-    height: 350px;
-  }
-  .topRow {
-    top: 25px;
-  }
-  .date,
-  .ticketsAvailable,
-  .buyNowButton {
-    font-size: 14px;
-  }
-  .buyNowButton {
-    padding: 10px 20px;
+  .homePageContainer {
+    .videoContainer {
+      height: 350px;
+    }
+    .topRow {
+      top: 25px;
+    }
+    .date,
+    .ticketsAvailable,
+    .buyNowButton {
+      font-size: 14px;
+    }
+    .buyNowButton {
+      padding: 10px 20px;
+    }
   }
 }
 @media screen and (max-width: $mobile) {
@@ -127,7 +131,6 @@
     background-repeat: no-repeat;
     position: relative;
     z-index: 10;
-
     .videoContainer {
       height: 100%;
       overflow: visible;
